# PLfixturesAPI

./: .gitignore  README.md  pyproject.toml  res.txt
OpenFaasFunctions/: matchbydate.yml  mongoConnection.txt
OpenFaasFunctions/matchbydate/: handler.py
src/plfixturesapi/: __init__.py
utils/: fixtureList.txt  fullSchedule.py  mongoTestRetrieval.py  mongodbUpdater.py  nextGame.py  output.txt  plAPITotalOutput.txt  siteScraper.py  teamFixtureList.py  versus.py
