[project]
name = "plfixturesapi"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "requests>=2.31.0",
    "black>=23.3.0",
    "beautifulsoup4>=4.12.2",
    "mechanicalsoup>=1.3.0",
    "pymongo>=4.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev_dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
